# MEView

./: CMakeLists.txt  conanfile.py
.github/workflows/: build.yml
res/: resources.qrc
res/ephys_viewer/: trace_view.css  trace_view.html  trace_view.js  trace_view.tools.js
res/js_libs/: qwebchannel.tools.js
res/shaders/: LineGeometry.geom  Lines.frag  Model.vert  PassThrough.vert  Quad.frag  Quad.vert  Soma.frag  Soma.vert  Trace.frag  Trace.vert
res/web/cellcard/: cellcard.css  cellcard.html  cellcard.js  spinner.js
src/: CellCard.cpp  CellCard.h  EMRenderer.cpp  EMRenderer.h  HoverPopup.cpp  HoverPopup.h  ImageQuery.h  LRUCache.h  LayerDepthsReader.cpp  LayerDepthsReader.h  LayerDrawing.cpp  LayerDrawing.h  MEView.cpp  MEView.h  MEView.json  MEWidget.cpp  MEWidget.h  MorphologyDescription.cpp  MorphologyDescription.h  MorphologyLineRenderer.cpp  MorphologyLineRenderer.h  MorphologyRenderer.cpp  MorphologyRenderer.h  MorphologyTubeRenderer.cpp  MorphologyTubeRenderer.h  MorphologyWidget.cpp  MorphologyWidget.h  NeuronDescriptor.h  Query.cpp  Query.h  RoundedPopup.cpp  RoundedPopup.h  Scene.cpp  Scene.h  SettingsAction.cpp  SettingsAction.h  TraceRenderer.cpp  TraceRenderer.h
src/CellCard/: CellCard.cpp  CellCard.h  CellCardWidget.cpp  CellCardWidget.h
src/Electrophysiology/: EphysWebWidget.cpp  EphysWebWidget.h  EphysWidget.cpp  EphysWidget.h  Scene.cpp  Scene.h  TraceRenderer.cpp  TraceRenderer.h
src/Rendering/: CellRenderObject.cpp  CellRenderObject.h  RenderObjectBuilder.cpp  RenderObjectBuilder.h  RenderRegion.cpp  RenderRegion.h  RenderState.h
